--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .custom-select {
   position: relative;
-  width: 100px;
+  width: 120px;
   font-family: Arial, sans-serif;
 }
 
@@ -36,15 +36,21 @@
 }
 
 .option {
-  padding: 10px;
+  padding: 8px 10px;
   cursor: pointer;
-  border-bottom: 1px solid #a3a3a3;
+  /* border-bottom: 1px solid #a3a3a3; */
 }
 
 .option:hover {
-  background-color: #dedede;
+  background-color: #3399FF;
+  color: #ffffff;
 }
 
 .options-list.active {
   display: block;
+}
+
+.dropdown__menu-button-icon{
+  color: #000000 !important;
+  margin-left: 10px;
 }
